--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,85 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;700&display=swap");
+
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+	font-family: "monorepo", sans-serif;
+  background-color: #EBECF2;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+html {
+  font-size: 22px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.learn-sec {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr); /* Three columns with equal width */
+	grid-gap: 20px; /* Gap between the cards */
   }
-  to {
-    transform: rotate(360deg);
+
+  .card {
+	background-color: #fff;
+	border-radius: 5px;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+	padding: 20px;
+	text-align: center;
   }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  
+  .echarts-for-react {
+	width: 100%;
+	height: 100%;
   }
-}
 
-.card {
-  padding: 2em;
-}
+  .echarts-for-react {
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+	border-radius: 10px;
+  }
+  
+  .chart-container .echarts-for-react .chart-legend {
+	margin-top: 20px;
+	display: flex;
+	justify-content: center;
+  }
+  
+  .chart-container .echarts-for-react .chart-tooltip {
+	border-radius: 5px;
+	padding: 10px;
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+	background-color: white;
+	color: black;
+	font-weight: bold;
+  }
+  
+  .chart-container .echarts-for-react .chart-tooltip .tooltip-title {
+	font-size: 14px;
+	margin-bottom: 5px;
+  }
+  
+  .chart-container .echarts-for-react .chart-tooltip .tooltip-item {
+	font-size: 12px;
+	margin-bottom: 5px;
+  }
+  
+  footer {
+	background-color: black;
+	color: white;
+	padding: 40px;
+  }
+  
+  .footer-container {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: center;
+  }
+  
+  .footer-container h3 {
+	margin: 0;
+	color: blue;
+	background-color: none;
+  }
 
-.read-the-docs {
-  color: #888;
-}
+  .copyright {
+	align-items: center;
+  }
