--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;700&display=swap");
 
 * {
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
-	font-family: "monorepo", sans-serif;
-  background-color: #EBECF2;
+	font-family: 'Open Sans', sans-serif;
+  	background-color: #EBECF2;
 }
 
 html {
@@ -72,6 +71,7 @@ html {
 	flex-wrap: wrap;
 	justify-content: space-between;
 	align-items: center;
+	background-color: black;
   }
   
   .footer-container h3 {
