--- a/src/Components/home/home.css
+++ b/src/Components/home/home.css
@@ -1,7 +1,6 @@
 .home-page-container {
     background-color: #2B4BBF;
     color: #fff;
-    width: 100vw;
     padding-top: 190px;
 }
 
@@ -24,13 +23,13 @@
     font-size: 16px;
     line-height: 28px;
     width: 543px;
-    font-family: 'monorepo';
+    font-family: 'Open Sans', sans-serif;
 }
 
 .hero-button {
     color: #3D66FF;
     background: #FFF;
-    border-radius: 3.5px;
+    border-radius: 200px;
     padding: 25px 50px;
     border: none;
     display: flex;
@@ -61,12 +60,15 @@
     font-size: 40px;
     margin-bottom: 16px;
     font-weight: bold;
+    text-align: center;
 }
 .chart-text {
     font-size: 16px;
+    font-family: 'Open Sans', sans-serif;
 }
 .bold-text {
-    font-weight: bold;    
+    font-weight: bold;
+    font-family: 'Open Sans', sans-serif;    
 }
 
 .chart-holder {
@@ -105,6 +107,7 @@
     color: #666666;
     font-size: 16px;
     line-height: 28px;
+    font-family: 'Open Sans', sans-serif;
 }
 
 
