--- a/src/App.css
+++ b/src/App.css
@@ -4,18 +4,13 @@
 	margin: 0;
 	box-sizing: border-box;
 	font-family: 'Open Sans', sans-serif;
-  	background-color: #EBECF2;
+  	background-color: #F2F2F2;
+	height: 100%;
 }
 
 html {
   font-size: 22px;
 }
-
-.learn-sec {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr); /* Three columns with equal width */
-	grid-gap: 20px; /* Gap between the cards */
-  }
 
   .card {
 	background-color: #fff;
@@ -27,7 +22,8 @@ html {
   
   .echarts-for-react {
 	width: 100%;
-	height: 100%;
+	height: auto;
+	background-color: black;
   }
 
   .echarts-for-react {
@@ -60,21 +56,17 @@ html {
 	margin-bottom: 5px;
   }
   
-  footer {
-	background-color: black;
-	color: white;
-	padding: 40px;
-  }
   
   .footer-container {
-	display: flex;
+	/* display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
 	align-items: center;
 	background-color: black;
+	border: 1px solid red; */
   }
   
-  .footer-container h3 {
+  /* .footer-container h3 {
 	margin: 0;
 	color: blue;
 	background-color: none;
@@ -82,4 +74,16 @@ html {
 
   .copyright {
 	align-items: center;
+  } */
+
+  .hist-container {
+	border-radius: 4px;
+    border: 1px solid #ccc;
+    padding: 5px 10px;
+    width: 200px;
   }
+
+.app {
+	background-color: #F2F2F2;
+	height: 100%;
+}
