--- a/src/Components/home/home.css
+++ b/src/Components/home/home.css
@@ -60,7 +60,7 @@
     font-size: 40px;
     margin-bottom: 16px;
     font-weight: bold;
-    text-align: center;
+    text-align: left;
 }
 .chart-text {
     font-size: 16px;
