Add data to the table by fetching window API

--- a/src/Components/navbar/navbar.css
+++ b/src/Components/navbar/navbar.css
@@ -6,6 +6,14 @@
     font-family: 'Open Sans', sans-serif;
 }
 
+.header a {
+    color: #fff;
+}
+
+.header li {
+    list-style: none;
+}
+
 .d-flex {
     display: flex;
     align-items: center;
